[package]
name = "parsey"
description = "A simple parser-generator framework."
version = "0.6.0"
authors = ["Sol Wolf<wolfendenbuild@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swolfenden9/parsey"
documentation = "https://docs.rs/parsey/latest/parsey/"
readme = "README.md"
keywords = ["parser", "parser-generator"]

[features]
default = []
derive = []

[dependencies]
parsey-derive = { version = "0.1.0", path = "parsey-derive" }
